# advent-of-code

./: .gitignore  README.md
2025/python/: README.md  pyproject.toml  start.py
2025/python/day-01/: README.md  main.py
2025/python/day-02/: README.md  main.py
2025/python/day-03/: README.md  main.py
2025/python/day-04/: README.md  main.py
2025/python/day-05/: README.md  main.py
2025/python/day-06/: README.md  main.py
2025/python/day-07/: README.md  main.py
2025/python/day-08/: README.md  main.py
2025/python/day-09/: README.md  main.py
2025/python/day-10/: README.md  main.py
2025/python/day-11/: README.md  main.py
2025/python/day-12/: README.md  main.py
2025/python/starter/: starter_main.py
